fix: page overflow

--- a/awesometournament/src/main/webapp/css/tournament.css
+++ b/awesometournament/src/main/webapp/css/tournament.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap");
 
+body, html {
+    overflow-x: hidden;
+}
+
 :root {
     --primary-color: #185ee0;
     --secondary-color: #e6eef9;
